--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ wp-content/themes/cp/css/slider-pro.min.css
 wp-config.php
 
 index.html_.html
+
+wp-content/plugins/si-contact-form/captcha/cache/aVbWx92lkTEHKGnn.php
