--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,11 @@ wp-config.php
 index.html_.html
 
 wp-content/plugins/si-contact-form/captcha/cache/aVbWx92lkTEHKGnn.php
+
+*.codekit
+
+*.codekit
+
+*.codekit
+
+*.codekit
