--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,11 @@ wp-content/plugins/si-contact-form/captcha/cache/aVbWx92lkTEHKGnn.php
 *.codekit
 
 *.codekit
+
+wp-content/plugins/si-contact-form/captcha/cache/BFFGm0czhli2dl7S.php
+
+wp-content/plugins/si-contact-form/captcha/cache/a9SVGNMfGxzirA6g.php
+
+wp-content/plugins/si-contact-form/captcha/cache/BFFGm0czhli2dl7S.php
+
+wp-content/themes/cp/css/config.codekit
