--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ wp-content/plugins/si-contact-form/captcha/cache/a9SVGNMfGxzirA6g.php
 wp-content/plugins/si-contact-form/captcha/cache/BFFGm0czhli2dl7S.php
 
 wp-content/themes/cp/css/config.codekit
+
+**.DS_STORE
