--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ wp-content/plugins/si-contact-form/captcha/cache/BFFGm0czhli2dl7S.php
 wp-content/themes/cp/css/config.codekit
 
 **.DS_STORE
+wp-content/uploads/2016/02/Style.com_-97x100.png
